welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:12: error: type mismatch;
 found   : Double
 required: Int
	return   Math.floor(  (a + b - Math.abs(b - a))/2);
                           ^