welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if( Math.abs(a-10)!=Math.abs(b-10)){
		return (inf(a,b));
	}else{
		return 0;
	}
}



def inf (a:Int , b:Int): Int = {
	return   Math.floor(  (a + b - Math.abs(b - a))/2);
}
